Cores (HTML5 e CSS3)

--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8"/>
     <title>Tudo sobre Google Glass</title>
     <style>
+        body{
+            background-color: #ffffff;
+            color: rgba(0, 0, 0, 0.6); 
+            <!-- rgba(vermelho, verde, azul, transparencia) onde a transparencia vaira de 
+            0 (totalmente transparente) até 1 (totalmente visivel)-->
+        }
         p{
            text-align: justify;
            text-indent: 50px;
