--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -6,7 +6,7 @@
     <style>
         body{
             background-color: #ffffff;
-            color: rgba(0, 0, 0, 0.6); 
+            color: rgba(0, 0, 0, 1); 
             <!-- rgba(vermelho, verde, azul, transparencia) onde a transparencia vaira de 
             0 (totalmente transparente) até 1 (totalmente visivel)-->
         }
@@ -44,7 +44,14 @@
         <h1>O que é</h1>
         <p>O <span style="font-weight: 700;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
-        [AQUI ENTRA UMA FOTO]
+        <figure> <!-- carater semantico do HTML5, especificando que a imagem faz parte do conteudo-->
+            <img src="_imagens/glass-quadro-homem-mulher.jpg"/>
+            <figcaption> 
+            <!-- Legenda da imagem, ajuda na pesquisa da imagem no google, e para deficientes auditivos-->
+                <h3>Google Glass</h3>
+                <p>Uma nova maneira de ver o mundo</p>
+            </figcaption>
+        </figure>
 
         <h1>Data de lançamento</h1>
         <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.
