--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -53,14 +53,31 @@
             <h1>Especificações Técnicas</h1>
 
             <table id="tabelaspec">
-                <caption>Tabela Técnica do Google Glass Mar/2013</caption>
+                <caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
 
-                <tr><td>Tela</td><td>Resolução equivalente a tela de 25"</td></tr>
-                <tr><td rowspan="2">Camera</td><td>5MP para fotos</td></tr>
-                <tr><td>720p para vídeos</td></tr>
-                <tr><td rowspan="2">Conectividade</td><td>Wi-Fi</td></tr>
-                <tr><td>Bluetooth</td></tr>
-                <tr><td>Memória Interna</td><td>12GB</td></tr>
+                <tr>
+                <td class="ColunaEsquerda">Tela</td> <td class="ColunaDireita">Resolução equivalente a tela de 25"</td>
+                </tr>
+
+                <tr>
+                <td rowspan="2" class="ColunaEsquerda">Camera</td> <td class="ColunaDireita">5MP para fotos</td>
+                </tr>
+
+                <tr>
+                <td class="ColunaDireita">720p para vídeos</td>
+                </tr>
+
+                <tr>
+                <td rowspan="2" class="ColunaEsquerda">Conectividade</td> <td class="ColunaDireita">Wi-Fi</td>
+                </tr>
+
+                <tr>
+                <td class="ColunaDireita">Bluetooth</td>
+                </tr>
+
+                <tr>
+                <td class="ColunaEsquerda">Memória Interna</td> <td class="ColunaDireita">12GB</td>
+                </tr>
             </table>
 
 
