--- a/projeto-glass-html5/multimidia.html
+++ b/projeto-glass-html5/multimidia.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+    <link rel="stylesheet" type="text/css" href="_css/fotos.css"/>
 </head>
 
 <script language="javascript" src="_javascript/funcoes.js"></script>
@@ -33,19 +34,24 @@
                 </ul>
             </nav>
         </header>
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Glass > Multimídia</h3>
+                        <h1>Sons e Vídeos</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                    </hgroup>
+                </header>
 
-        Glass > Multimídia
-        Sons e Vídeos
-        por Gustavo Guanabara
-        Atualizado em 01/Maio/2013
+                Áudio e Vídeo
 
-
-        Áudio e Vídeo
-
-        [AQUI ENTRA UM VÍDEO]
-        [AQUI ENTRA UM ÁUDIO]
-
-
+                [AQUI ENTRA UM VÍDEO]
+                [AQUI ENTRA UM ÁUDIO]
+            </article>
+        </section>
+        
         <footer id="rodape">
             <p>Copyright&copy; 2013 - by Gustavo Guanabara <br/>
             Facebook | Twitter</p>
