--- a/projeto-glass-html5/multimidia.html
+++ b/projeto-glass-html5/multimidia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
-    <link rel="stylesheet" type="text/css" href="_css/fotos.css"/>
+    <link rel="stylesheet" type="text/css" href="_css/media.css"/>
 </head>
 
 <script language="javascript" src="_javascript/funcoes.js"></script>
@@ -45,10 +45,17 @@
                     </hgroup>
                 </header>
 
-                Áudio e Vídeo
+                <div id="tv-radio">
+                    <audio id="musica" controls="controls">
+                        <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
+                        Desculpe mas não foi possível carregar o áudio <!-- Mensagem de erro caso não seja carregado o áudio -->
+                    </audio>
+                    <video id="filme" controls poster="_imagens/video-mini03.jpg">
+                        <source type="video/mp4" src="_media/getting-started.mp4"/>
+                        Desculpe mas não foi possível carregar o vídeo <!-- Mensagem de erro caso não seja carregado o vídeo -->
+                    </video>
+                </div>
 
-                [AQUI ENTRA UM VÍDEO]
-                [AQUI ENTRA UM ÁUDIO]
             </article>
         </section>
         
